Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-21096

Galera cluster crashed after starting async replication from master standlaone server

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.4.8
    • 10.4.11
    • Galera
    • None

    Description

      Environment is A (stand alone master) - > (B<>C,<>D) Galera
      After upgrade to 10.4.8 and trying to start replication, server is getting crashed

      2019-11-18 7:23:32 1241 [Note] Slave I/O thread: Start asynchronous replication to master '****@****.com:3306' in log 'mysql-bin.000044' at position 829636879
      2019-11-18 7:23:32 1241 [Note] Slave I/O thread: connected to master 'repl_usr@****:3306',replication started in log 'mysql-bin.000044' at position 829636879
      2019-11-18 7:23:32 1242 [Note] Slave SQL thread initialized, starting replication in log 'mysql-bin.000044' at position 829636879, relay log './relay-bin.000001' position: 4
      mysqld: /home/buildbot/buildbot/padding_for_CPACK_RPM_BUILD_SOURCE_DIRS_PREFIX/mariadb-10.4.8/wsrep-lib/include/wsrep/client_state.hpp:314: int wsrep::client_state::app
      end_key(const wsrep::key&): Assertion `state_ == s_exec' failed.
      191118 7:23:33 [ERROR] mysqld got signal 6 ;
      ...
      mysqld(my_print_stacktrace+0x2e)[0x5601fc7b183e]
      mysqld(handle_fatal_signal+0x30f)[0x5601fc247e0f]
      sigaction.c:0(__restore_rt)[0x7f20028e05d0]
      :0(__GI_raise)[0x7f2000bb22c7]
      :0(__GI_abort)[0x7f2000bb39b8]
      :0(__assert_fail_base)[0x7f2000bab0e6]
      :0(__GI___assert_fail)[0x7f2000bab192]
      addr2line: 'mysqld': No such file
      mysqld(wsrep_thd_append_key+0x196)[0x5601fc1c3f96]
      mysqld(+0xa40103)[0x5601fc3e3103]
      mysqld(+0xa4ce65)[0x5601fc3efe65]
      mysqld(+0xa5ccd0)[0x5601fc3ffcd0]
      mysqld(_ZN7handler12ha_write_rowEPKh+0x2f8)[0x5601fc253b38]
      mysqld(_ZN15rpl_slave_state11record_gtidEP3THDPK8rpl_gtidybbPPv+0x381)[0x5601fc1687a1]
      mysqld(_ZN15rpl_slave_state4loadEP3THDPKcmbb+0x9b)[0x5601fc169afb]
      mysqld(+0x5f1234)[0x5601fbf94234]
      mysqld(handle_slave_io+0xc62)[0x5601fbf9d602]
      mysqld(+0xdc124d)[0x5601fc76424d]
      pthread_create.c:0(start_thread)[0x7f20028d8dd5]
      /lib64/libc.so.6(clone+0x6d)[0x7f2000c7a02d]
      Trying to get some variables.
      Some pointers may be invalid and cause the dump to abort.
      Query (0x0): is an invalid pointer
      Connection ID (thread ID): 62
      Status: NOT_KILLED
      

      Binlog content at this position is

      Log_name | Pos | Event_type | Server_id | End_log_pos | Info
      | mysql-bin.000044 | 829636879 | Gtid | 4 | 829636921 | BEGIN GTID 140-4-391018 |
      | mysql-bin.000044 | 829636921 | Query | 4 | 829637071 | use `db`; delete from table where last_used <= '2019-11-16 22:47:25.275' |
      | mysql-bin.000044 | 829637071 | Query | 4 | 829637153 | COMMIT |
      

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              niljoshi Nilnandan Joshi
              Votes:
              1 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2.25d
                  2.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.